--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "avvvatars-react": "^0.4.2",
     "chart.js": "^4.2.1",
     "next": "13.1.6",
     "react": "18.2.0",
